@@ -28,6 +28,7 @@ import java.util.Map;
 import java.util.stream.Collectors;
 
 import org.apache.carbondata.core.metadata.datatype.DataType;
+import org.apache.carbondata.core.metadata.datatype.DataTypes;
 import org.apache.carbondata.core.scan.expression.ColumnExpression;
 import org.apache.carbondata.core.scan.expression.Expression;
 import org.apache.carbondata.core.scan.expression.LiteralExpression;
@@ -49,6 +50,7 @@ import com.facebook.presto.spi.type.BigintType;
 import com.facebook.presto.spi.type.BooleanType;
 import com.facebook.presto.spi.type.DateType;
 import com.facebook.presto.spi.type.DecimalType;
+import com.facebook.presto.spi.type.Decimals;
 import com.facebook.presto.spi.type.DoubleType;
 import com.facebook.presto.spi.type.IntegerType;
 import com.facebook.presto.spi.type.SmallintType;
@@ -69,17 +71,19 @@ public class PrestoFilterUtil {
 
   private static DataType Spi2CarbondataTypeMapper(CarbondataColumnHandle carbondataColumnHandle) {
     Type colType = carbondataColumnHandle.getColumnType();
-    if (colType == BooleanType.BOOLEAN) return DataType.BOOLEAN;
-    else if (colType == SmallintType.SMALLINT) return DataType.SHORT;
-    else if (colType == IntegerType.INTEGER) return DataType.INT;
-    else if (colType == BigintType.BIGINT) return DataType.LONG;
-    else if (colType == DoubleType.DOUBLE) return DataType.DOUBLE;
-    else if (colType == VarcharType.VARCHAR) return DataType.STRING;
-    else if (colType == DateType.DATE) return DataType.DATE;
-    else if (colType == TimestampType.TIMESTAMP) return DataType.TIMESTAMP;
+    if (colType == BooleanType.BOOLEAN) return DataTypes.BOOLEAN;
+    else if (colType == SmallintType.SMALLINT) return DataTypes.SHORT;
+    else if (colType == IntegerType.INTEGER) return DataTypes.INT;
+    else if (colType == BigintType.BIGINT) return DataTypes.LONG;
+    else if (colType == DoubleType.DOUBLE) return DataTypes.DOUBLE;
+    else if (colType == VarcharType.VARCHAR) return DataTypes.STRING;
+    else if (colType == DateType.DATE) return DataTypes.DATE;
+    else if (colType == TimestampType.TIMESTAMP) return DataTypes.TIMESTAMP;
     else if (colType.equals(DecimalType.createDecimalType(carbondataColumnHandle.getPrecision(),
-        carbondataColumnHandle.getScale()))) return DataType.DECIMAL;
-    else return DataType.STRING;
+        carbondataColumnHandle.getScale()))) return DataTypes
+        .createDecimalType(carbondataColumnHandle.getPrecision(),
+            carbondataColumnHandle.getScale());
+    else return DataTypes.STRING;
   }
 
   /**
@@ -121,20 +125,14 @@ public class PrestoFilterUtil {
                 } else {
                   GreaterThanExpression greater = new GreaterThanExpression(colExpression,
                       new LiteralExpression(value, coltype));
-                  if(valueExpressionMap.get(value) == null) {
-                    valueExpressionMap.put(value, new ArrayList<>());
-                  }
-                  valueExpressionMap.get(value).add(greater);
+                  valueExpressionMap.computeIfAbsent(value, key -> new ArrayList<>()).add(greater);
                 }
                 break;
               case EXACTLY:
                 GreaterThanEqualToExpression greater =
                     new GreaterThanEqualToExpression(colExpression,
                         new LiteralExpression(value, coltype));
-                if(valueExpressionMap.get(value) == null) {
-                  valueExpressionMap.put(value, new ArrayList<>());
-                }
-                valueExpressionMap.get(value).add(greater);
+                valueExpressionMap.computeIfAbsent(value, key -> new ArrayList<>()).add(greater);
                 break;
               case BELOW:
                 throw new IllegalArgumentException("Low marker should never use BELOW bound");
@@ -150,18 +148,12 @@ public class PrestoFilterUtil {
               case EXACTLY:
                 LessThanEqualToExpression less = new LessThanEqualToExpression(colExpression,
                     new LiteralExpression(value, coltype));
-                if(valueExpressionMap.get(value) == null) {
-                  valueExpressionMap.put(value, new ArrayList<>());
-                }
-                valueExpressionMap.get(value).add(less);
+                valueExpressionMap.computeIfAbsent(value, key -> new ArrayList<>()).add(less);
                 break;
               case BELOW:
                 LessThanExpression less2 =
                     new LessThanExpression(colExpression, new LiteralExpression(value, coltype));
-                if(valueExpressionMap.get(value) == null) {
-                  valueExpressionMap.put(value, new ArrayList<>());
-                }
-                valueExpressionMap.get(value).add(less2);
+                valueExpressionMap.computeIfAbsent(value, key -> new ArrayList<>()).add(less2);
                 break;
               default:
                 throw new AssertionError("Unhandled bound: " + range.getHigh().getBound());
@@ -171,10 +163,10 @@ public class PrestoFilterUtil {
       }
       if (singleValues.size() == 1) {
         Expression ex;
-        if (coltype.equals(DataType.STRING)) {
+        if (coltype.equals(DataTypes.STRING)) {
           ex = new EqualToExpression(colExpression,
               new LiteralExpression(singleValues.get(0), coltype));
-        } else if (coltype.equals(DataType.TIMESTAMP) || coltype.equals(DataType.DATE)) {
+        } else if (coltype.equals(DataTypes.TIMESTAMP) || coltype.equals(DataTypes.DATE)) {
           Long value = (Long) singleValues.get(0);
           ex = new EqualToExpression(colExpression, new LiteralExpression(value, coltype));
         } else ex = new EqualToExpression(colExpression,
@@ -183,7 +175,7 @@ public class PrestoFilterUtil {
       } else if (singleValues.size() > 1) {
         ListExpression candidates = null;
         List<Expression> exs = singleValues.stream()
-            .map((a) -> new LiteralExpression(ConvertDataByType(a, type), coltype))
+            .map((a) -> new LiteralExpression(a, coltype))
             .collect(Collectors.toList());
         candidates = new ListExpression(exs);
         filters.add(new InExpression(colExpression, candidates));
@@ -204,14 +196,14 @@ public class PrestoFilterUtil {
           valuefilters.add(finalFilters);
         }
 
-        if(valuefilters.size() == 1){
+        if (valuefilters.size() == 1) {
           finalFilters = valuefilters.get(0);
         } else if (valuefilters.size() >= 2) {
-         finalFilters = new AndExpression(valuefilters.get(0), valuefilters.get(1));
-         for (int i = 2; i < valuefilters.size() ; i++) {
-           finalFilters = new AndExpression(finalFilters, valuefilters.get(i));
-         }
-       }
+          finalFilters = new AndExpression(valuefilters.get(0), valuefilters.get(1));
+          for (int i = 2; i < valuefilters.size(); i++) {
+            finalFilters = new AndExpression(finalFilters, valuefilters.get(i));
+          }
+        }
 
         filters.add(finalFilters);
       }
@@ -232,8 +224,9 @@ public class PrestoFilterUtil {
   }
 
   private static Object ConvertDataByType(Object rawdata, Type type) {
-    if (type.equals(IntegerType.INTEGER)) return Integer.valueOf(rawdata.toString());
-    // new Integer((rawdata.toString()));
+    if (type.equals(IntegerType.INTEGER) || type.equals(SmallintType.SMALLINT))
+      return Integer.valueOf(rawdata.toString());
+      // new Integer((rawdata.toString()));
     else if (type.equals(BigintType.BIGINT)) return rawdata;
     else if (type.equals(VarcharType.VARCHAR)) {
       if (rawdata instanceof Slice) {
@@ -249,14 +242,18 @@ public class PrestoFilterUtil {
       c.add(Calendar.DAY_OF_YEAR, ((Long) rawdata).intValue());
       Date date = c.getTime();
       return date.getTime() * 1000;
-    }
-    else if (type instanceof DecimalType) {
-      if(rawdata instanceof  Double) {
+    } else if (type instanceof DecimalType) {
+      if (rawdata instanceof Double) {
         return new BigDecimal((Double) rawdata);
-      } else if (rawdata instanceof  Long) {
+      } else if (rawdata instanceof Long) {
         return new BigDecimal(new BigInteger(String.valueOf(rawdata)),
             ((DecimalType) type).getScale());
+      } else if (rawdata instanceof Slice) {
+        return new BigDecimal(Decimals.decodeUnscaledValue((Slice) rawdata),
+            ((DecimalType) type).getScale());
       }
+    } else if (type.equals(TimestampType.TIMESTAMP)) {
+      return (Long) rawdata * 1000;
     }
 
     return rawdata;
